--- a/style/index.css
+++ b/style/index.css
@@ -1,4 +1,12 @@
-@import url('./style/reset.css');
+
+h1{
+    color: red;
+}
+
+h1:hover{
+    color: blue;
+}
+
 /* .circle{
     width: 60px;
     height: 60px;
