--- a/style/all.css
+++ b/style/all.css
@@ -9,10 +9,15 @@ html {
 }
 
 body {
-    font-family: Arial;
+    font-family: Verdana;
     background-image: url('../img/bgi-wall.png');
     height: 100%;
     margin-top: 80px;
+}
+
+h1 {
+    font-size: 48px;
+    font-weight: bold;
 }
 
 h2 {
