--- a/style/menu.css
+++ b/style/menu.css
@@ -1,31 +1,31 @@
-
 /* -----peoduct-begin----- */
-.base-product h3{
+.base-product h3 {
     text-align: center;
     padding: 20px 0;
     color: #EC7801;
 }
 
-.base-product .btn_list{
+.base-product .btn_list {
     padding-top: 20px;
 }
 
 .product_list {
     display: flex;
-    justify-content: space-between;
     flex-wrap: wrap;
+    margin-right: -75px;
 }
 
 .product_item {
     text-align: center;
     margin-top: 20px;
+    margin-right: 75px;
 }
 
-.product_item a{
+.product_item a {
     text-decoration: none;
 }
 
-.product_pic{
+.product_pic {
     overflow: hidden;
     margin-bottom: 20px;
 }
@@ -40,42 +40,42 @@
     color: #333;
 }
 
-.product_item p{
+.product_item p {
     color: #643D2F;
 }
 
-.product_item:hover img{
+.product_item:hover img {
     transform: scale(1.3);
 }
 
-.product_item:hover h4{
+.product_item:hover h4 {
     color: #643D2F;
 }
 
-.product_item:hover p{
+.product_item:hover p {
     color: #EC7801;
 }
 
 /* -----peoduct-end----- */
 
 /* -----btn-begin----- */
-.btn_list{
+.btn_list {
     display: flex;
     justify-content: center;
 }
 
-.btn_item{
+.btn_item {
     height: 50px;
     border-radius: 5px;
     overflow: hidden;
     background-color: #EC7801;
 }
 
-.btn_item + .btn_item{
+.btn_item+.btn_item {
     margin-left: 30px;
 }
 
-.btn_item .btn{
+.btn_item .btn {
     padding: 0 20px;
     line-height: 50px;
     font-size: 20px;
@@ -83,7 +83,8 @@
     color: #F4ECDC;
 }
 
-.btn_item:hover .btn{
+.btn_item:hover .btn {
     background-color: #643D2F;
 }
+
 /* -----btn-end----- */
