add slide(css, js), nav change more to home

--- a/style/about.css
+++ b/style/about.css
@@ -74,6 +74,7 @@
 /* -----place-brgin----- */
 .base-place .container{
     display: flex;
+    overflow: hidden;
 }
 
 .base-place .container div:first-child{
