--- a/style/news.css
+++ b/style/news.css
@@ -78,3 +78,35 @@
 }
 
 /* -----news-end----- */
+
+/* -----rwd-begin(max-width:1319.98px)----- */
+@media screen and (max-width: 1319.98px) {
+
+    /* -----news-begin----- */
+    .news_list {
+        margin-right: 0;
+        justify-content: center;
+    }
+
+    .news_item {
+        margin-right: 20px;
+    }
+    /* -----news-end----- */
+}
+
+/* -----rwd-end(max-width:1319.98px)----- */
+
+/* -----rwd-begin(max-width:767.98px)----- */
+@media screen and (max-width: 767.98px) {
+    /* -----btn-begin----- */
+    .btn_list {
+        flex-wrap: wrap;
+    }
+
+    .btn_item {
+        margin-right: 20px;
+        margin-bottom: 20px;
+    }
+    /* -----btn-end----- */
+}
+/* -----rwd-end(max-width:767.98px)----- */
